# superset-sdk-python

./: .coveragerc  .gitignore  .isort.cfg  CLAUDE.md  GEMINI.md  LICENSE.txt  Makefile  README.md  README.rst  dev-requirements.txt  manifest.json  pyproject.toml  setup.cfg  setup.py  test_derived.py  test_handle_relation.py  test_handle_relation_real.py  test_integration.py
.agents/: settings.json
.claude/: settings.local.json
docs/: conf.py  index.rst
src/: lib.py
src/api/clients/: dbt.py  superset.py
src/auth/: main.py  superset.py  token.py
src/cli/: command.py  databases.py  datasets.py  lib.py  metricflow.py  metrics.py  relations.py
src/preset_cli/api/clients/: dbt.py
src/preset_cli/cli/superset/sync/dbt/: command.py  metrics.py
src/superset_cli/: __init__.py  lib.py
src/superset_cli/api/clients/: dbt.py  superset.py
src/superset_cli/auth/: superset.py  token.py
src/superset_cli/cli/superset/: export.py  import_.py  main.py  sql.py
src/superset_cli/cli/superset/sync/: main.py
src/superset_cli/cli/superset/sync/dbt/: command.py  databases.py  datasets.py  exposures.py  lib.py  metricflow.py  metrics.py  relations.py
src/superset_cli/cli/superset/sync/native/: command.py
tests/: profiles.yaml  test_convert_query_to_projection.py  test_datasets.py  test_dbt_lib.py  test_dbt_schemas.py  test_lib.py  test_load_profiles.py  test_manifest_integration.py  test_marshmallow_model_sql.py  test_metricflow.py  test_metrics.py  test_relations.py
