[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[project]
name = "semantic-layer-tool"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "tmph2003", email = "tmph2003@gmail.com"}
]
requires-python = ">=3.7"
dependencies = [
  "pandas>=1.0",
  "requests"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/tmph2003/superset-sdk-python"