[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[project]
name = "semantic-layer-tool"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "tmph2003", email = "tmph2003@gmail.com"}
]
requires-python = ">=3.7"
dependencies = [
  "Cython>=0.29.26",
  "PyYAML>=6.0",
  "appdirs>=1.4.4",
  "backoff>=1.10.0",
  "beautifulsoup4>=4.10.0",
  "click>=8.0.3",
  "jinja2>=3.0.3",
  "marshmallow>=3.17.0",
  "numpy>=1.21.5",
  "pandas>=1.3.5",
  "prison>=0.2.1",
  "prompt-toolkit>=3.0.24",
  "pygments>=2.11.2",
  "python-graphql-client>=0.4.3",
  "requests>=2.26.0",
  "rich>=12.3.0",
  "sqlalchemy>=1.4,<2",
  "sqlglot>=19,<23",
  "tabulate>=0.8.9",
  "typing-extensions>=4.0.1",
  "yarl>=1.7.2",
  "aiohttp>=3.8.3"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/tmph2003/superset-sdk-python"

[project.scripts]
superset-cli = "superset_cli.cli.superset.main:superset_cli"