[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[project]
name = "semantic-layer-tool"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "tmph2003", email = "tmph2003@gmail.com"}
]
requires-python = ">=3.7"
dependencies = [
  "PyYAML>=6.0",
  "appdirs>=1.4.4",
  "backoff>=1.10.0",
  "click>=8.0.3",
  "jinja2>=3.0.3",
  "marshmallow>=3.17.0",
  "prison>=0.2.1",
  "requests>=2.26.0",
  "rich>=12.3.0",
  "sqlalchemy>=1.4,<2",
  "sqlglot>=19,<23",
  "typing-extensions>=4.0.1",
  "yarl>=1.7.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/tmph2003/superset-sdk-python"

[project.scripts]
superset-cli = "cli.command:main"